# pta-standards

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .markdown-link-check.json  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE-CODE  LICENSE-DOCS  README.md  ROADMAP.md  SECURITY.md  flake.nix  index.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  spec_clarification.yml  test_case.yml
.github/workflows/: benchmarks.yml  build-docs.yml  check-links.yml  ci.yml  conformance-tests.yml  differential.yml  lint-python.yml  run-alloy.yml  run-tests.yml  validate-grammars.yml  validate-schemas.yml
conformance/: README.md  registry.json
conformance/benchmarks/: generate-benchmark.py  methodology.md  spec.md
conformance/levels/: level-1-parse.md  level-2-validate.md  level-3-query.md  level-4-full.md  overview.md
conformance/process/: badge-usage.md  self-certification.md  test-requirements.md
conversions/: README.md  loss-matrix.md  matrix.md
conversions/beancount-hledger/: edge-cases.md  spec.md
conversions/beancount-ledger/: edge-cases.md  spec.md
conversions/interchange/: journal.proto  journal.schema.json  spec.md
conversions/ledger-hledger/: edge-cases.md  spec.md
core/: README.md  bibliography.md  glossary.md
core/conventions/: notation.md  rfc2119.md  stability-markers.md
core/formal/: README.md  balance-equation.als  inventory.als
core/i18n/: README.md  currency-symbols.md  date-formats.md  number-formats.md
core/model/: README.md  account.md  amount.md  commodity.md  journal.md  lot.md  metadata.md  ordering.md  posting.md  price.md  transaction.md
core/numerics/: README.md  precision.md  rounding.md  tolerance.md
core/types/: README.md  date.md  decimal.als  decimal.md  string.md  unicode.md
examples/: README.md
examples/beancount/: business.beancount  healthcare.beancount  investments.beancount  multicurrency.beancount  nonprofit.beancount  personal.beancount
examples/hledger/: business.journal  healthcare.journal  investments.journal  multicurrency.journal  nonprofit.journal  personal.journal
examples/ledger/: business.ledger  healthcare.ledger  investments.ledger  multicurrency.ledger  nonprofit.ledger  personal.ledger
extensions/: README.md  registry.json
extensions/process/: proposal.md  (+1 more)
formats/: README.md
implementations/: README.md  registry.json
imports/: README.md
meta/: README.md
rationale/: README.md  design-principles.md  formal-methods.md  grammar-format.md  history.md  schema-format.md  test-philosophy.md  why-three-specs.md
reference/: README.md  faq.md
reports/: README.md
scripts/: check_test_ids_unique.py  update_readme.py
security/: README.md  threat-model.md
tests/: INTERPRETING.md  README.md
tests/harness/runners/rust/: Cargo.toml
tests/harness/runners/rust/src/: main.rs
tooling/: README.md
(+359 files in other folders)
